WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44446
[IndexedDB] IDBTransaction is missing the implementation for objectStore method
https://bugs.webkit.org/show_bug.cgi?id=44446
Summary
[IndexedDB] IDBTransaction is missing the implementation for objectStore method
Andrei Popescu
Reported
2010-08-23 11:45:40 PDT
"[IndexedDB] IDBTransaction is missing the implementation for objectStore method"
Attachments
Patch
(13.75 KB, patch)
2010-08-24 01:43 PDT
,
Andrei Popescu
jorlow
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2010-08-24 01:43:51 PDT
Created
attachment 65235
[details]
Patch
Jeremy Orlow
Comment 2
2010-08-24 01:50:11 PDT
Comment on
attachment 65235
[details]
Patch r=me
Andrei Popescu
Comment 3
2010-08-24 02:05:57 PDT
Committed
r65879
: <
http://trac.webkit.org/changeset/65879
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug