2010-08-24  Andrei Popescu  <andreip@dhcp-172-16-14-12.lon.corp.google.com>

Reviewed by Jeremy Orlow.

        Implement IDBTransaction::objectStore

        [IndexedDB] IDBTransaction is missing the implementation for objectStore method
        https://bugs.webkit.org/show_bug.cgi?id=44446

        * storage/indexeddb/script-tests/transaction-basics.js:
        (test):
        (openSuccess):
        (createSuccess):
        (abortCallback):
        * storage/indexeddb/transaction-basics-expected.txt:
2010-08-24  Andrei Popescu  <andreip@dhcp-172-16-14-12.lon.corp.google.com>

        Reviewed by Jeremy Orlow.

        [IndexedDB] IDBTransaction is missing the implementation for objectStore method
        https://bugs.webkit.org/show_bug.cgi?id=44446

        * storage/IDBDatabaseBackendImpl.cpp:
        (WebCore::IDBDatabaseBackendImpl::transaction):
        * storage/IDBTransactionBackendImpl.cpp:
        (WebCore::IDBTransactionBackendImpl::create):
        (WebCore::IDBTransactionBackendImpl::IDBTransactionBackendImpl):
        (WebCore::IDBTransactionBackendImpl::objectStore):
        * storage/IDBTransactionBackendImpl.h:
        * storage/IDBTransactionCoordinator.cpp:
        (WebCore::IDBTransactionCoordinator::createTransaction):
        * storage/IDBTransactionCoordinator.h:

Canonical link: https://commits.webkit.org/56658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65879 268f45cc-cd09-0410-ab3c-d52691b4dbfc