LayoutTests/storage/indexeddb/script-tests/transaction-basics.js
@@ -2,19 +2,6 @@ description("Test IndexedDB transaction basics.");
 if (window.layoutTestController)
     layoutTestController.waitUntilDone();
 
-function abortCallback()
-{
-    verifyAbortEvent(event);
-    done();
-}
-
-function createTransactionCallback()
-{
-    verifySuccessEvent(event);
-    transaction = evalAndLog("event.result.transaction()");
-    transaction.onabort = abortCallback;
-}
-
 function test()
 {
     shouldBeTrue("'indexedDB' in window");
@@ -22,8 +9,37 @@ function test()
 
     result = evalAndLog("indexedDB.open('name', 'description')");
     verifyResult(result);
-    result.onsuccess = createTransactionCallback;
+    result.onsuccess = openSuccess;
     result.onerror = unexpectedErrorCallback;
+}
+
+function openSuccess()
+{
+    debug("createObjectStoreCallback():");
+    verifySuccessEvent(event);
+    db = evalAndLog("db = event.result");
+
+    deleteAllObjectStores(db);
+
+    result = evalAndLog("db.createObjectStore('storeName', null)");
+    verifyResult(result);
+    result.onsuccess = createSuccess;
+    result.onerror = unexpectedErrorCallback;
+}
+
+function createSuccess()
+{
+    verifySuccessEvent(event);
+    transaction = evalAndLog("db.transaction()");
+    transaction.onabort = abortCallback;
+    var store = evalAndLog("store = transaction.objectStore('storeName')");
+    shouldBeEqualToString("store.name", "storeName");
+}
+
+function abortCallback()
+{
+    verifyAbortEvent(event);
+    done();
 }
 
 test();
